[gd_scene load_steps=2 format=2]

[ext_resource path="res://Screens/MiniGames/BaseMinigame.gd" type="Script" id=1]

[node name="BaseMinigame" type="Node2D"]
script = ExtResource( 1 )

[node name="DeadlineTimer" type="Timer" parent="."]
one_shot = true
[connection signal="timeout" from="DeadlineTimer" to="." method="_on_DeadlineTimer_timeout"]
